# receipt_breakdown

./: Cargo.toml
src/: app.rs  core.rs  items.rs  libs.rs  main.rs  messages.rs  theme.rs  types.rs  ui.rs  view.rs  widget.rs  window.rs
src/components/: theme.rs
src/core/: calculations.rs  gratuity.rs  items.rs  quantity.rs  receipt.rs  service_charge.rs  tax.rs  tax_group.rs  testing_ui_stuff.rs  total.rs
src/data/: window.rs
src/data/window/: position.rs  size.rs
src/types/: type_definitions.rs
src/ui/: add_gratuity_view.rs  add_item_view.rs  add_service_charge_view.rs  add_tax_group_view.rs  add_tax_view.rs  gratuity_list_view.rs  item_list_view.rs  service_charge_list_view.rs  tax_group_list_view.rs  tax_list_view.rs
src/ui/custom_appearances/: generate_table.rs  mod.rs  pos_button.rs  pos_container.rs  validator.rs
src/view/: item_view.rs  views.rs
src/widget/: animation.rs  table.rs  table_widget.rs  table_widget_style.rs
src/widget/table/: divider.rs  lib.rs
