[package]
name = "receipt_breakdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies.iced]
version = "0.12.0"
# git = "https://github.com/iced-rs/iced.git"
# rev = "9e3ad0e1e025232f93ef04bc79328c3444839a34" # 0.12.0
default-features = false
features = ["image", "tokio", "multi-window", "advanced", "canvas"]

[dependencies]
iced.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1"
iced_core = "0.12"
iced_style = "0.12"
iced_widget = "0.12"