[package]
name = "receipt_breakdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = {version = "0.13.1", features = ["tokio", "advanced", "multi-window" ]}
iced_core = "0.13.1"
futures = "0.3.30"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "fs", "process" ,"io-util"] }
thiserror = "1.0.30"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[target.'cfg(windows)'.dependencies]
image = "0.24.6"